# LoopOS

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LoopOS_完整开发指南.md  MAINTAINERS.md  Makefile  PLUGIN_SPEC.md  README.md  RELEASE_CHECKLIST.md  RFC_PROCESS.md  ROADMAP.md  SECURITY.md  pyproject.toml  rc_audit_cli_smoke.py
.agent-prompts/: LoopOS_Fusion_Codex_Prompts.md  LoopOS_Kernel_Level_Codex_Prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: LoopOS_Current_Repo_Codex_Improvement_Prompts.md  LoopOS_Data_Safety_Backup_Guard_Prompt.md  LoopOS_Final_Upgrade_Master_Codex_Prompt.md  LoopOS_Hermes_Upgrade_Audit.md  LoopOS_Policy_OS.md  LoopOS_Ultimate_Landable_Codex_Prompt.md  action-boundary.md  agent-command-interface.md  agent-freedom-runtime.md  agent-internal-language.md  agent-loop-interface.md  ai-isa.md  ail.md  anti-bloat-gate.md  architecture-kernel.md  architecture-mvp.md  architecture-v0-3.md  architecture.md  benchmarks.md  brand-loopi.md  chatops-gateway.md  cli-reference.md  cli-ui.md  communication-distance-optimizer.md  computer-control-runtime.md  computer-control-safety-boundary.md  contributing.md  convergence-and-delivery.md  core-loop.md  creativity-boundary.md  current-repo-improvement-plan.md  data-guard.md  demo-flows.md  deployment.md  final-loopos-architecture.md  founding-preview-limitations.md  fusion-optimizer-2.md  fusion-optimizer.md  fusion-router.md  gateway-and-nodes.md  (+69 more)
loopos/: __init__.py  checkpoint_store.py  communication_distance.py  lail.py
providers/: defaults.yaml
scripts/: anti_bloat_check.py  check_release_clean.py  ci_report.py  gen_i18n_yaml_stubs.py  package_release.py  run_mutation_pilot.py  v0_2_readiness_check.py  v0_3_live_provider_smoke.py  v0_3_live_provider_smoke_http.py  v0_3_readiness_check.py  v0_4_full_readiness_check.py  v0_4_readiness_check.py  validate_readiness_schema.py  verify_release_artifact.py
tests/: conftest.py  test_aci_models.py  test_aci_policy_binding.py  test_aci_provider_integration.py  test_aci_runner.py  test_aci_serialization.py  test_action_boundary.py  test_adapters_a2a.py  test_adapters_feishu.py  test_adapters_mcp.py  test_adapters_memory_os.py  test_adapters_skill_optimizer.py  test_adapters_v0_3.py  test_agent_bus.py  test_agent_language.py  test_ail.py  test_ali_aci_consumption.py  test_ali_fsm.py  test_ali_models.py  test_ali_replay_engine.py  test_ali_session.py  test_ali_trace_bridge.py  test_alpha_acceptance.py  test_anti_bloat_check.py  test_budget_ledger.py  test_capability_boundary.py  test_ci_precommit_wiring.py  test_cli.py  test_cli_error_handling.py  test_cli_human_renderers.py  (+100 more)
(+560 files in other folders)
