[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loopos"
version = "0.3.0"
description = "The open operating runtime for AI agents with policy-governed syscalls, trace replay, memory governance, data guard, maintainability gates, and plugin standards."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
langgraph = [
  "langgraph>=1.0",
]
workbench = [
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
loopos = "loopos.cli.app:main"

[tool.setuptools.packages.find]
include = ["loopos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest-tmp"
markers = [
  "unit: fast pure logic tests",
  "integration: local tempdir, sqlite, CLI, and mock-provider tests",
  "acceptance: public Founding Release contract tests",
  "slow: optional longer-running tests excluded from fast checks",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  "OpenHands-1.8.0",
  "langgraph-1.2.6",
  "letta-0.16.8",
  "zep-main",
  "projectmem-0.1.5",
  "hermes-agent-2026.6.19",
  "移植参考的源码",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_decorators = false
warn_unused_ignores = false
exclude = ["OpenHands-1.8.0", "langgraph-1.2.6", "letta-0.16.8", "zep-main", "projectmem-0.1.5", "hermes-agent-2026.6.19", "移植参考的源码"]
